v3.10.4 (XXXX-XX-XX)
--------------------

* Allowing enabling/disabling supervision maintenance mode also via followers in
  active failover mode. Previously the supervision maintenance mode could only
  be enabled/disabled by making a call to the active failover leader.

* BTS-266: When starting up a cluster without `--cluster.force-one-shard`,
  creating a database and then restarting the cluster with the startup option
  `--cluster.force-one-shard` set to true, when the formerly created database
  has more than one shard, but the flag is set to true, this could lead to
  arangosearch's analyzers to use optimizations that should not be used if not
  in a single shard mode. For this not to happen, the verification of the
  parameter being true as a condition to run optimizations was removed.

* Activate RDB_CoveringIterator and use it for some geo index queries.
  This speeds up and simplifies geo queries with geo index which do not use
  GEO_DISTANCE.


v3.10.3 (2023-01-23)
--------------------

* Log information about follower state/apply progress in supervision job that
  organizes failover in active failover mode.

* Updated arangosync to v2.14.0.

* Updated ArangoDB Starter to 0.15.6.

* Fix bug in hotbackup download/restore to make sure no data is mixed up between
  servers. This fixes a bug introduced in 3.10. Note that previous 3.10 versions
  may not correctly restore a hotbackup which was uploaded from one cluster and
  downloaded into another.

* ES-1396: under some rare circumstances it was possible that background index
  creation missed some documents in case the documents were inserted after
  background index creation started and the corresponding WAL files with the
  inserts were already removed before background indexing caught up.

* Web UI [FE-48]: Additional fix to the previously introduced license
  information usability improvement. In case the server is being started with