@@ -1,6 +1,13 @@
 v3.10.4 (XXXX-XX-XX)
 --------------------
 
+* Added startup option `--javascript.user-defined-functions`.
+  This option controls whether JavaScript user-defined functions (UDFs) can be
+  used in AQL queries. The option defaults to `true`. The option can be set to
+  `false` to disallow using JavaScript UDFs from inside AQL queries.
+  In that case, a parse error will be thrown when trying to run a query that
+  invokes a UDF.
+
 * Allowing enabling/disabling supervision maintenance mode also via followers in
   active failover mode. Previously the supervision maintenance mode could only
   be enabled/disabled by making a call to the active failover leader.
